--- a/Pages/3About nova/1Who we are/philosophyintro---4web.org
+++ b/Pages/3About nova/1Who we are/philosophyintro---4web.org
@@ -15,7 +15,6 @@ As pioneers our duty is to explore new media, publish our findings, and map the 
 
 The fringe of technology is full of ethical complexities and it is our responsibility to set a high moral standard for the industry.
 
-We lead by example, challenge traditional structures and fight for underdogs.
+We lead by example, challenge traditional structures, and fight for underdogs.
 
 /We Dream Awake./
-
