--- a/Pages/3About nova/1Who we are/philanthropy_Finalized.org
+++ b/Pages/3About nova/1Who we are/philanthropy_Finalized.org
@@ -1,20 +1,19 @@
  
 ** Philanthropy
 
- We provide education and access to those with less opportunity.  May it be teaching Red Hook West Housing Project's youth how to code, or brining internet and PCs to under developed villages, we are on determined be the change that betters the world.   
-
+We provide education and access to those with less opportunity.  May it be teaching coding to the youth of Red Hook West Housing or brining internet and PCs to international villages, we are on determined be the change that improves the world in the best way we know how.
 
 :philanthropy:
 
 Join our mission to spread good fortune.
 
 **** Local
-- programming, art and business plasses for project kids
+- programming, art and business places for kids.
 - design classes 
 **** global
 ***** Connect the isolated
 
-Provide internet access to remote villages in Albania, eabling them to connect with the world.   Further, we provide free online classes and mentor them in developing their computer skills.  These skills allow them to be be paid at 6-factor of the current rate to work at a bazzar, airport, or restuarant.  They will provide for their entire family through remote computer work.  
+Provide internet access to remote villages in Albania, enabling them to connect with the world.   Further, we provide free online classes and mentor them in developing their computer skills.  These skills allow them to be be paid at 6-factor of the current rate to work at a bazaar, airport, or restaurant. They will provide for their entire family through remote computer work.  
 
 === Provide Internet access 
 ***** Develop young talents
@@ -22,5 +21,4 @@ Provide internet access to remote villages in Albania, eabling them to connect w
 ===  voice acting classes to children in Colombia
 
 === "paypal donation
-: link : 
- 
+: link :  
