--- a/Pages/3About nova/2Partnership/Partners/Volunteertext---4web.org
+++ b/Pages/3About nova/2Partnership/Partners/Volunteertext---4web.org
@@ -12,18 +12,8 @@ Get involved with community projects in New York and around the world.
 
  ## Local
 
-Nova-mode-ademics is our local coding school for underprivilged New Yorkers to learn skills for the real world.  We help them cultivate their own talent and realize potential.  We aim to inspire and guide, while givng students the freedom to learn at their own rate.  Nova-mode-ademics teaches the application of programs such as emacs and git, that empower young ambitious New Yorkers with applicable and cross-industry programming abilities.  We believe learning invigorates the mind.  Our mission is to share opportunity
+Nova-mode-ademics is our local coding school for underprivileged New Yorkers to learn skills for real world application. We help children cultivate their own talent and realize potential. We aim to inspire and guide, while giving students the freedom to learn at their own rate.  Nova-mode-ademics teaches the application of programs such as emacs and git, that empower young and ambitious New Yorkers with applicable and cross-industry programming abilities. We believe learning invigorates the mind. Our mission is to share opportunity
 
-## Inter-continental
+## Intercontinental
 
-We are on a mission to bring internet areas of the world in need.  Through our non-for-profit, Novacaine, we source, develop and nuild  infrastructure in remote ares of Eastern Europe, the Middle East, Africa, Central America.  We know the wonderfull powers and liberties of free information.  Connecting these communities to the web will open their worlds.  Some very well may leap frog the World Wide Web all together and enter straight into 3D metaverses.  We believe in people and our mission is to share opportunity with those who have less.
-
-
-
-
-
-
-
-
-
-
+We are on a mission to bring internet to areas of the world in need. Through our not-for-profit, Novacaine, we source, develop and build  infrastructure in remote areas of Eastern Europe, the Middle East, Africa, Central America.  We know the wonderful powers and liberties of free information. Connecting these communities to the web will open their worlds. Some may very help leapfrog the World Wide Web all together and enter straight into the 3D metaverses. We believe in people and our mission is to share opportunity with those who have less opportunity.
