--- a/Pages/3About nova/2Partnership/Partners/investors---4web.org
+++ b/Pages/3About nova/2Partnership/Partners/investors---4web.org
@@ -4,7 +4,7 @@ Investors
 
 * Second
 
-Nova is an incubator for ideas and talent.  If you're interested to invest in the XR industry, we'd be glad to provide you with options and advice. 
+Nova is an incubator for ideas and talent. If you're interested to invest in the XR industry, we'd be glad to provide you with advice. 
 
 * Abstract
 
@@ -25,11 +25,3 @@ Nova is an incubator for ideas and talent.  If you're interested to invest in th
 - Photogrammetry studio
 
 - The ultimate Scavenger Hunt
-
-
-
-
-
-
-
-
