--- a/Pages/3About nova/2Partnership/Partners/sponsor---4web.org
+++ b/Pages/3About nova/2Partnership/Partners/sponsor---4web.org
@@ -8,14 +8,10 @@ Sponsors
 
 * Abstract
 
-What are you interested to sponsor?
+What are you interested in sponsoring?
 
 - Live Event Stream
 - Indie Game Release (product placement)
 - Customized Content
 - Hackathon
 - College Student Initiatives
-
-
-
-* Content
