--- a/Pages/3About nova/2Partnership/Productions/productions---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/productions---4web.org
@@ -6,10 +6,10 @@ Productions
 
 - Archives
 - Live
-- Up Coming
+- Upcoming
 
 XR Production is the business of bringing video game and movie production together to achieve an objective.  
 
 * Abstract
 
-Productions are driven by clear direction and organization.  The typical production will start with design.  We'll sketch, storyboard and model the strategy.   This first phase delivers a full specification for development.  We then bring in technicians, programmers and artists. After sprints and validations we alpha, beta, and professionally test.  Then, we refine, and deploy.   Publishing and promotion vary based on audience, budget and preferences.   Your return on investment grows exponentially, as long as you plan 6-12 months ahead.   
+Productions are driven by clear direction and organization. The typical production will start with design. We'll sketch, storyboard and model the strategy. This first phase delivers a full specification for development. We then bring in technicians, programmers and artists. After sprints and validations we alpha, beta, and professionally test. Then we refine and deploy. Publishing and promotion vary based on audience, budget, and preferences. Your return on investment grows exponentially. Productions of this scale generally require 6-12 months of advanced planning. 
