--- a/Pages/3About nova/2Partnership/Productions/goaheadtour---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/goaheadtour---4web.org
@@ -14,15 +14,15 @@ Go Ahead Tours wanted to fill a tour "IMPERIAL CHINA & THE YANGTZE RIVER: throug
 
 ** Objective
 
-To fill *two* busses with paid tourists for a $6,000 excursion through Beijing, Yangtze River Cruise and Shanghai
+To fill *two* busses with paid tourists for a $6,000 excursion through Beijing, Yangtze River Cruise, and Shanghai
 
 ** Execution
 
 - Pauline Frommer hosted a special tour
-- Promoted during the Travel Show's commercial breaks
-- Live-cut to the Joan Hamburgh Show, from across the globe!
+- Promoted during the Travel Show commercial breaks
+- Live-cut to the Joan Hamburg Show, from across the globe!
 
 ** Results
 
-- Filled *three* busses and the experience of a lifetime for more than 100 people.
+- Three buses and the experience of a lifetime for more than 100 people.
 - Increased investment by 25% year over year
