--- a/Pages/3About nova/2Partnership/Productions/conbody---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/conbody---4web.org
@@ -8,4 +8,4 @@ Con Body
 
 * Abstract
 
-Live prison workout streamed from Lower East Side, New York. 
+Live prison workout streamed from Lower East Side in New York City. 
