--- a/Pages/3About nova/2Partnership/Productions/aus---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/aus---4web.org
@@ -21,7 +21,7 @@ Australia's Northern Territory
 
 - Use the platform of this loyal audience to target the right market, at the right time, and with a message that is going to get them up and move.  
 
-- Generate leads and capture contact information to follow up with continued dialgue
+- Generate leads and capture contact information to follow up with continued dialogue
 
 **** Execution
 
@@ -40,4 +40,5 @@ Australia's Northern Territory
 - The experience became natural conversation for Pauline at events, travel shows and in her online/on-air conversations with the audience 
 
 - An over-delivery of contest entries and a 40% opt-in rate to receive more information!
+
 
