--- a/Pages/3About nova/2Partnership/Productions/allproductions.org
+++ b/Pages/3About nova/2Partnership/Productions/allproductions.org
@@ -4,15 +4,15 @@
 
 - Not everyone thinks to visit the Northern Territory when they plan their trip Downunder.  
 
-- The destination can be relatively expensive and people do not realize that the experience here is superior
+- The destination can be relatively expensive and people do not realize that the experience here is superior.
 
 **** solution
 
-- Work with an opinion leader to position the destination properly
+- Work with an opinion leader to position the destination properly.
 
 - Use the platform of this loyal audience to target the right market, at the right time, and with a message that is going to get them up and move.  
 
-- Generate leads and capture contact information to follow up with continued dialgue
+- Generate leads and capture contact information to follow up with continued dialogue
 
 **** execution
 
@@ -26,7 +26,7 @@
 
 **** results
 
-- Over delivered  more than 800,000 impressions. 
+- Over delivered more than 800,000 impressions. 
 
 - The experience became natural conversation for Pauline at events, travel shows and in her online/on-air conversations with the audience 
 
@@ -64,7 +64,7 @@
 **** Execution
 **** Results
 
-*** Taiwain
+*** Taiwan
 **** Situation
 
 Taiwan is of the lesser known Asia destinations but has an amazing culture to share. We needed to stand apart from the rest of Asia. Knowing we will not brand bigger than China or Japan in the short-term, we complimented them.
@@ -75,7 +75,7 @@ Taiwan is of the lesser known Asia destinations but has an amazing culture to sh
 (4) Develop PR exposure through creative engagement
 
 **** Execution
- Travel expert, Pauline Frommer, brought the travel show to Taiwan. We created an array of content to share across multiple distribution channels. Integrate with entertainment darlings and showcase the culture through event partnerships in Bryant Park.
+Travel expert, Pauline Frommer, brought the travel show to Taiwan. We created an array of content to share across multiple distribution channels. Integrate with entertainment darlings and showcase the culture through event partnerships in Bryant Park.
 
 **** Results
 - 7% increase in US visits year over year. 
@@ -86,7 +86,7 @@ Taiwan is of the lesser known Asia destinations but has an amazing culture to sh
 
 *** HR
 **** situation
-Hard Rock Riviera Maya had a PR objective to earn big media.   They had access to top music talent and a badass resort in Mexico.   
+Hard Rock Riviera Maya had a PR objective to earn big media. They had access to top music talent and a badass resort in Mexico.   
 
 **** solution
 
@@ -99,7 +99,7 @@ Strategically promoted
 Earn coverage
 
 **** execution
-Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 million.   Live music performances from Nick Jonas and Brett Michaels, all the beach, spa and partying anyone person could handle... 
+Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 million.   Live music performances from Nick Jonas and Brett Michaels, all the beach, spa and partying anyone person could handle... 
 
 **** results
 - 201,008,806 Gross Impressions
@@ -112,20 +112,20 @@ Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 mill
 
 **** Want to know more?  
 ****** Expand story here, or 
-It was the dead cold of winter.  Those endlessly numb days.   It was still dark but half the city was on their way to work.   At 7:29AM while inching through traffic, Elvis Duran in his jolly voice announced to the country his plans for vacation.   His words reverbed live to 75 cities and  was giving away vacations to5 million people.  This May he and his family would be flying to the Hard Rock Riviera Maya Resort in Mexico.
+It was the dead cold of winter. Those endlessly numb days. It was still dark but half the city was on their way to work. At 7:29AM while inching through traffic, Elvis Duran in his jolly voice announced to the country his plans for vacation.   His words riverbed live to 75 cities and  was giving away vacations to 5 million people.  This May he and his family would be flying to the Hard Rock Riviera Maya Resort in Mexico.
 ​
-Hyped as the vacation of the year, 400x people purchased packages to join the parties.
+Hyped as the vacation of the year, 400x people purchased packages to join the parties.
 ​
 We recruited Nick Jonas and Brett Michaels to join.
 ​
-Over the weekend hundreds lived life to the fullest via Hard Rock's all inclusive, while millions enjoyed vicariously.   The program earned more than 85 million impressions on social media, alone.  
+Over the weekend hundreds lived life to the fullest via Hard Rock's all inclusive, while millions enjoyed vicariously.   The program earned more than 85 million impressions on social media, alone.  
 
 Media outlets across the country picked up the fun, earning more than 200 million impressions and more than $2.5 million in media value.
 ​
 The vacation has now become a tradition.
 
 ****** Submit request
-subit a request and we will reply within 48 hours.
+submit a request and we will reply within 48 hours.
 
 [text box: name]
 [text box: email]
