--- a/Pages/3About nova/2Partnership/Productions/Kelly---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/Kelly---4web.org
@@ -10,8 +10,7 @@ Kelly Vision
 
 ** Situation
 
-Dr. Kelly was looking for a way to combine the mass reach of tradiational emdia with modern technologies of digital tracking to quantifiably measure his return on investment
-
+Dr. Kelly was looking for a way to combine the mass reach of traditional media with modern technologies of digital tracking to quantifiably measure his return on investment
 
 ** Objective
 
@@ -40,5 +39,6 @@ Delivered more than $20k in vision business in 21 days.
 50+ phone calls received
 
 1,000 + text messages 
+
 
 
