--- a/Pages/3About nova/2Partnership/Productions/Italiantrade---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/Italiantrade---4web.org
@@ -16,7 +16,7 @@ Italian Dine Out Week
 
 ** Objective
 
-Drive foot traffic to the 26 restaurants that import the most italian goods into New York.   They 
+Drive foot traffic to the 26 restaurants that import the most italian goods into New York.
 
 
 
