--- a/Pages/3About nova/2Partnership/Productions/HawaiianAirlines---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/HawaiianAirlines---4web.org
@@ -9,20 +9,20 @@ Hawaiian Airlines
 
 ** Situation
 
-Hawaiian airlines was launching a new flight from JFK direct to Honolulu needed people to know!
+Hawaiian airlines was launching a new flight from JFK direct to Honolulu and needed people to know about it.
 
 ** Solution
 
-Multi-platform promotion through traditional media, digital targeting and on-site activation
+Multi-platform promotion through traditional media, digital targeting and on-site activation.
  
 ** Execution
 
-Starting in April we surveyed New York metro about airlines, trafficked customized commercial media, called participants to action and produced world-class content.   On-stage in front of thousands of professionals Hawaiian Airlines brought culture to life and associated it with the new route's details.  The response was unforgettable. 
+Starting in April we surveyed New York metro about airlines, trafficked customized commercial media, called participants to action and produced world-class content.   On-stage in front of thousands of professionals Hawaiian Airlines brought culture to life and associated it with the new route's details. The response was unforgettable. 
 
 ** Results
 
 - Increased brand recognition by 12.1%
 - Click-through rate four times the national average
-- 11% greater reacher than promised
+- 11% greater reach than predicted
 
 
