--- a/Pages/2Services/3Deploy/publishingintro.org
+++ b/Pages/2Services/3Deploy/publishingintro.org
@@ -52,4 +52,4 @@ They influence 50% of the market.  [to format graph]
 
 **** Activation
 - Pop up shop
-- Perminant installation
+- Permanent installation
