--- a/Pages/2Services/2Develope/3Network/livestream---4web.org
+++ b/Pages/2Services/2Develope/3Network/livestream---4web.org
@@ -8,8 +8,6 @@ Live Stream
 
 * Abstract
 
-Live Stream in XR to mass distribute real events in real time.  Anyone in the world with an XR headset can remotely attend your event.  Birthday party your cousin cannot attend?  Throw on the headset and participate in singing along, cutting the cake and wishing family lots of love!
+Live Stream in XR to mass distributing real events in real time. Anyone in the world with an XR headset can remotely attend your event. Birthday party your cousin cannot attend? Throw on the headset and participate in singing along, cutting the cake and wishing family lots of love!
 
-Having a blow our party, or big festival?  Want to sell virtual tickets for them to attend in their headset?  Charge a $5 cover to attend, promote to 50 million, convince 1/10,000 to join and you sold 5,000 for a $25,000 profit.
-
- and was included in a 
+Having a blow our party or big festival?  Want to sell virtual tickets for them to attend in their headset? Charge a $5 cover to attend, promote to 50 million, convince 1/10,000 to join and you sold 5,000 for a $25,000 profit.
