--- a/Pages/2Services/2Develope/3Network/cloudcomputing---4web.org
+++ b/Pages/2Services/2Develope/3Network/cloudcomputing---4web.org
@@ -8,6 +8,4 @@ Cloud Computing
 
 * Abstract
 
-Cloud computing is the remote storage, access and control of computers.   A "cloud" is really just a server, and storing in the cloud merely means you are storing your data on someone elses' hard drive.  For example, iCloud is storing you data on Apple's hardware, instead of your own (locally).
-
-
+Cloud computing is the remote storage, access, and control of computers. A "cloud" is really just a server. Storing in the cloud merely means you are storing your data on someone else's' hard drive. For example, iCloud is storing you data on Apple's hardware, instead of your own local drive.
