--- a/Pages/2Services/2Develope/3Network/blockchain----4web.org
+++ b/Pages/2Services/2Develope/3Network/blockchain----4web.org
@@ -8,7 +8,7 @@ Blockchains
 
 * Abstract
 
-A "block"-"chain" is a distributed database (or ledger) that maintains a continuously growing list of ordered records.  Some major blockchain features include: 
+A "block"-"chain" is a distributed database (or ledger) that maintains a continuously growing list of ordered records. Some major blockchain features include: 
 
 - Secure, private transactions
 - Microtransactions
@@ -16,9 +16,6 @@ A "block"-"chain" is a distributed database (or ledger) that maintains a contin
 - Democratized administrative controm 
 - General platform stability
 
+Features, such as "smart contracts" allow us to host concerts in VR with secure micro-transactions. An inumeral amount of people can attend concerts.  On a blockchain, you can charge them based on network contribution.  
 
-Features, such as "smart contracts" allow us to host concerts in VR with secure micro-transactions.  An inumeral amount of people can attend concerts and experiences live with musicians and artists.  On a blockchain, you can charge them based on network contribution.  
-
-Blockchain tech allows the users to exclusively own and control them content and platform the build.  
-
-
+Blockchain tech allows the users to exclusively own and control them content and platform they build.  
