--- a/Pages/3About nova/1Who we are/aboutus---4web.org
+++ b/Pages/3About nova/1Who we are/aboutus---4web.org
@@ -8,7 +8,7 @@ Who We Are - About Us
 
 * Abstract
 
-Nova provide advance access to advance technologies. Our business is to produce XR media for businesses to reduce internal costs, increase sales, or both.  
+Nova provide advance access to advance technologies. We produce XR media for businesses to reduce internal costs, increase sales, or both.  
 
 * Content
 
