--- a/Pages/1Solutions/2Consultation/3Learning Lab/2Resource Center.org
+++ b/Pages/1Solutions/2Consultation/3Learning Lab/2Resource Center.org
@@ -10,6 +10,8 @@ Resource Center
 
 Through academic relationships and our own study of the industry and its history, we'll periodically deliver presentations and supporting documents to assist your understanding of XR and better assist your clients. 
 
+LINKS TO THESE 
+
 - Academic Papers
 - Production Tools
 - Favorite Forums
