--- a/Pages/1Solutions/2Consultation/3Learning Lab/3E-Learning.org
+++ b/Pages/1Solutions/2Consultation/3Learning Lab/3E-Learning.org
@@ -15,6 +15,6 @@ Learn something
 
 * Abstract
 
-Past studies of human cognition are inflating in relevance as we step into the Virtual World. For example, Dale's Cone of Learning was an innovative study in the mid 20th century supporting the notion that within two weeks humans retain 90% of what they do and say - a breakthrough realization compared to the 50% retention of what we see and hear. Credible studies like this one are proving applicable again as the immersive XR worlds continue to grow.
+Past studies of human cognition are becoming more relevant as we step into the Virtual World. For example, Dale's Cone of Learning was an innovative study in the mid 20th century supporting the notion that within two weeks humans retain 90% of what they do and say - a breakthrough realization compared to the 50% retention of what we see and hear. Credible studies like this one are proving applicable again as the immersive XR worlds continue to grow.
 
 [ DALES CONE OF LEARNING CHART]
