--- a/Pages/1Solutions/2Consultation/consultationintro---4web.org
+++ b/Pages/1Solutions/2Consultation/consultationintro---4web.org
@@ -13,26 +13,13 @@ We provide access to advance technologies.
 
 * Abstract
 
-XR [Extended Reality], such as Virtual reality (VR) and Augmented Reality (AR) empower communication, collaboration and learning.  XR media is interactive, dynamic and concious of space.  
+XR [Extended Reality], such as Virtual reality (VR) and Augmented Reality (AR) empower communication, collaboration and learning. XR media is interactive, dynamic and conscious of space.  
 
+These technologies will increasingly be in the home. Through your phone (or XR glasses/goggles) you can engage simulated environments, digital models, and other dynamic 3D information for entertainment, education, productivity, and much more.
 
-These technologies will increasingly be in the home.   Through your phone, or XR glasses/goggles, you can engage simulate environments, digital models, and other dynamic 3D information for entertainment, education, productivity, and much more.
-
-Historical rates of technology adoption suggest twenty-five percent of the US population will have adopted AR/VR in their homes in the next five years.
+Historical rates of technological adoption suggest twenty-five percent of the US population will have an AR/VR in their homes in the next five years.
 
 XR Media can be the ultimate communication tool, or the reason your business falls
 behind. 
 
 XR is the next frontier of human connectivity.
-
-
-
-* Content
-
-  We’ll help you understand, strategize and produce XR media.  Production services include design, development and deployment.   
-
-
- The skills required to produce 3d virtual media (XR) are broad and deep, but we'll keep you focused.  By internalizing the basics of xr hardware and xr software you'll be familiar with why the latest technological breakthroughs, and understand why they  are indeed breakthroughs.  With this, you'll innovative ways to improve your business that the competition is not yet equiped to think up themselves.   Arm yourself with knowledge and your business excel in this new wave of media technologies 
-
-Only you can take the time to prepare yourself and you team to understand how and why to implament techologies such as XR (virtual/augmented reality) artificial inteliigence, robotics, block-chains /et cetera/.   We'd be glad to help.  
-
