--- a/Pages/2Services/1Design/story----4web.org
+++ b/Pages/2Services/1Design/story----4web.org
@@ -8,4 +8,4 @@ Your Story
 
 * Content 
 
-Your brand tells a story. Some businesses focus on this story as a building block as they enter the market while others develop their brand mentality at a subconscious level in the early days of their work. Whatever the state of your brand, we’ll spend time with you to understand your values. Then we’ll highlight your identity and present it through a combination of media forms that reveals your story to inspire. 
+Your brand tells a story. Some businesses focus on this story as a building block to grow in the market while others develop their brand mentality at a subconscious level in the early days of their work. Whatever the state of your brand, we’ll spend time with you to understand your values. Then we’ll highlight your identity and present it through a combination of media forms that reveals the inspiration in your story. 
