--- a/Pages/2Services/2Develope/1Program/spatialos---4web.org
+++ b/Pages/2Services/2Develope/1Program/spatialos---4web.org
@@ -6,4 +6,6 @@ Spatial OS
 
 * Abstract
 
-/coming soon/
+Content: 
+
+Spatial OS is a software that allows for VR experiences to be stored on a cloud rather than on your local drive. 
