--- a/Pages/2Services/2Develope/1Program/ai----4web.org
+++ b/Pages/2Services/2Develope/1Program/ai----4web.org
@@ -5,7 +5,7 @@ Artificial Intelligence
 
 * Abstract
 
-Artificial Intelligence is intelligence demonstrated by a machine.   The branch of computer sciences that studies AI research studies and developes machines to perceive the environment and make adjustments to influence the likelihood of success at achieving goals.  Machines are designed to mimic "cognitive" functions associated with human minds, like "comprehension", or "deductive reasoning".
+Artificial Intelligence is intelligence demonstrated by a machine. The branch of computer sciences that studies AI research studies and develops machines that are designed to mimic "cognitive" functions associated with human minds, like "comprehension", or "deductive reasoning".
 
 
 * Content
@@ -13,53 +13,45 @@ Artificial Intelligence is intelligence demonstrated by a machine.   The branch 
 Artificial Agents enhances VR through 
 - Personalization 
 - Generative design
-- Contextual awerness
+- Contextual awareness
 - Data indexing
 - character engines
 
-*** Personaliztion
+*** Personalization
 
-Personalization is when a coputer remembers your prefrences and autoatically loads them PLUS some other new ideas it predicts you will like.  This is done through probability models, also known as an /AI algorythm/ or some other hype name.
+Personalization is when a computer remembers your preferences and automatically loads them PLUS some other new ideas it predicts you will like. This is done through probability models, also known as an /AI algorithm/ or some other hype name.
 
-In VR you are lead to experiences you are likely to enjoy.   Your space is tailored to you taste.  The way in which the world works is up to you, because of AI.  
+In VR you are led to experiences you are likely to enjoy. Your space is tailored to your taste. Because of AI, the world works according to your preferences.  
 
-By delivering a highly personal experince, we increase game-play, engagement, and retention.  AI excellerates the rate of learning.   
+By delivering a highly personal experience, we increase game-play, engagement, and retention. AI accelerates the rate of learning.   
 
 
 *** Generative design
 
-Generative design is creation by computer, based on data.  By feeding big data into an AI we can generate designs humans might not have thought of.   With proper programming, you can enlist the requirements for a airplane, request certain fuel intake and other variables, and receive a menu of physically possible desins.  
+Generative design is creation by a computer, based on data. By feeding big data into an AI we can generate designs humans may not have conceived. With proper programming, you can enlist the requirements for a airplane, request certain fuel intake and other variables, and receive a menu of physically possible designs.  
 
-In virtual reality, we generate worlds based on game-play and experiences.   Generative design is an up front cost that pays dividens long after it's investment has been returned.   There is no limit to how many world designs you generate, and the parameters are within you control. 
-
+In Virtual Reality, we generate worlds based on game-play and experiences.   Generative design is an upfront cost that pays dividends long after it's investment has been returned. There is no limit to how many world designs you generate, and the parameters are within you control. 
 
 *** Storefront navigation
 
-At the front of a store, or in a virtual world, you will ask an AI "butler" or "host" for information about the local area.  These bots will grow more and more expert in communicating with patrons and visitors.  Think about friendly chatbots on a website, but personified as a character.
+At the front of a store, or in a virtual world, you will ask an AI "butler" or "host" for information about the local area. These bots will grow more and more expert in communicating with patrons and visitors. Think about friendly chatbots on a website but personified as a character.
 
-*** Contextual awerness
+*** Contextual awareness
 
-*Contextual awareness* allows the machine to compare the query to known information.  For example, google maps knows your location.   If you press the blue dot (ask where you are) it compares this request to its knowledge of the map.  The computer has a small degree of contextual awerness.   
+*Contextual awareness* allows the machine to compare the query to known information.  For example, google maps knows your location. If you press the blue dot (ask where you are), it compares this request to its knowledge of the map. The computer has a small degree of contextual awareness.   
 
-In Virtual reality When a AI character knows it's surroundings it will play more thoughtfully, making for better competition/collaboration and game play.  AI characters train through trial and error.  They record the context of the successes and failures and adjust to optimize likelihood for success.   
+In Virtual reality When a AI character knows it's surroundings it will play more thoughtfully, making for better competition/collaboration and game play. AI characters train through trial and error. They record the context of the successes and failures and adjust to optimize likelihood for success.   
 
+*** Data indexing
 
-*** Data indxing
+Artificial intelligence algorithms to better index user data. If information is better categorized it will be better read and understood. We'll comprehend larger and large sums of data, especially very intimate information VR can facilitate, such as body movements and emotional states.  
 
-Artificial intelligent algorthms to better index user data.   If information is better categorized it will be better read and understood.  We'll comprehend larger and large sums of data, especially very intimate information VR can fascilitate, such as body movements and emotional states.  
+A semi-technical explanation of the process is to track, collate, distill and visualize.
 
-A semi-technical explanaition of the process is to track, collate, distill and visualize.
-
-By visualizng the data of VR players through   indexing you wholistically understand the user's experience. The AI creates visuals of comple data in 3D, so you can move around and scale the data in real-size.  This engagement significantl increases comprehension.  
+By visualizing the data of VR players through indexing, we gain a wholistic understanding the user's experience. The AI creates visuals of complete data in 3D, so you can move around and scale the data in real-size. This engagement significantly increases comprehension.  
 
 *** Character engines
 
-In Virtual Reality (XR) develops "character engines" into the experience.  These engine the characters behavior and desicion making.   By programming learning algorythms your characters can remember information about you, your game play, and whatever else we teach it to... within reason.  They can be your virtual friends.
+In Virtual Reality (XR) develops "character engines" into the experience. These enhance the characters behavior and decision making. By programming learning algorithms your characters can remember information about you, your game play, and whatever else we teach it to...within reason. They can be your virtual friends.
 
-Intelligent characters make for better game play.  The user's experience is familiar and personalized.   When you allow visitors to customize their environment, feel ownership.  Intelligent characters increase experience affinity and replay-value.
-
-
-**** Programs of Interest
-
-- Live forever audio capture
-- Professional Services
+Intelligent characters make for better game play. The user's experience is familiar and personalized. When you allow visitors to customize their environment, they feel ownership. Intelligent characters increase experience affinity and replay-value.
