--- a/Pages/2Services/2Develope/2Produce/photogrammetry---4web.org
+++ b/Pages/2Services/2Develope/2Produce/photogrammetry---4web.org
@@ -8,9 +8,8 @@ Photogrammetry
 
 * Abstract
 
+Is the scanning, computing and rendering of 3D models through 2D photographs and distance differentiators. By taking several hundred photos of an object from strategic angles we redesign and texture photorealistic objects and environments.
 
-Is the scanning, computing and rendering of 3D models through 2D photographs and distance differentiators.   By taking several hundred photos of an object from strategic angles we redesign and texture photorealistic objects and environments.
+Photogrammetry conveys real spaces as digital simulations. Think "immersive realism".
 
-Photogrammetry conveys real spaces as digital simulations,  Think "immersive realism".
-
-Re-creating real environments in virtual reality enables us to simulate travel and fascilitate training.  By maping locations 
+Recreating real environments in Virtual Reality enables us to simulate travel and facilitate training. By blending photography with 3D game engines we're enhancing the "realistic" possibilities of VR. 
