Update Text Upload Report.org

--- a/Pages/Text Upload Report.org
+++ b/Pages/Text Upload Report.org
@@ -30,4 +30,7 @@ Needs links to bulleted text to bring user to resources outside our site. (KK to
 *** Develop 
 - Need to add to admin 
 
+*** Deploy 
+- All headers, text, pictos uploaded. 
+
 
