Update Text Upload Report.org

--- a/Pages/Text Upload Report.org
+++ b/Pages/Text Upload Report.org
@@ -49,6 +49,16 @@ Needs links to bulleted text to bring user to resources outside our site. (KK to
 - No image for "Olympics in VR" but pulled from Art Director 
 - 7 Lab Live pages uploaded 
 
+*** Productions
+
+- Australia: uploaded 
+- Caymen: No text (JM To Do)
+- Peru: No text (JM To Do) 
+- Kelly: Uploaded
+- Live Nation: No text (JM To Do)
+- Hawaii: uploaded 
+- Hard Rock: Uploadd 
+- Potential Synergy: No Text (JM to weigh in...is this a summary of our logo redisgn for them?)
 
 
 
