--- a/Pages/3About nova/2Partnership/careers/freelancer---4web.org
+++ b/Pages/3About nova/2Partnership/careers/freelancer---4web.org
@@ -8,7 +8,7 @@ Want part time work?
 
 # Abstract
 
-Nova hires designers, developers and technicians to particpate in global productions on a per-project basis.   Check out our products and past productions.  If you want to get involved, message Anna Irene and she'll hook you up.  AnnaIrene@novamedia.nyc+ + -
+Nova hires designers, developers and technicians to participate in global productions on a per-project basis. Check out our products and past productions. If you want to get involved, message Anna Irene and she'll hook you up. AnnaIrene@novamedia.nyc
 
 
 
