--- a/Pages/3About nova/2Partnership/careers/volunteer---4web.org
+++ b/Pages/3About nova/2Partnership/careers/volunteer---4web.org
@@ -8,3 +8,5 @@ Volunteer
 
 
 * Content
+
+Looking to help out in the neighborhood? As part of our philanthropic mission we work with students in Red Hook, leading coding, literacy, business, and design initiatives. There’s always plenty to do around the warehouse. If you’re interested in swinging by to check out some VR and lend a hand, give us a shout.  
