Update Text Upload Report.org

--- a/Pages/Text Upload Report.org
+++ b/Pages/Text Upload Report.org
@@ -1,4 +1,4 @@
-* Kyle Uploading Text to Admin
+* Kyle Uploading Text and Pictos to Admin
 ** 12:30 AM March 12
 
 ** Solutions 
@@ -60,10 +60,14 @@ Needs links to bulleted text to bring user to resources outside our site. (KK to
 - Hard Rock: Uploadd 
 - Potential Synergy: No Text (JM to weigh in...is this a summary of our logo redisgn for them?)
 
+*** Partners 
 
+- Investor: Uploaded
+- Studios: Uploaded 
+- Producer: Uploaded
 
+*** Careers 
+- All 5 added with text and picto
 
-
-
-
+Nice work, guys. Plenty more to come 
 
