Update Text Upload Report.org

--- a/Pages/Text Upload Report.org
+++ b/Pages/Text Upload Report.org
@@ -69,5 +69,7 @@ Needs links to bulleted text to bring user to resources outside our site. (KK to
 *** Careers 
 - All 5 added with text and picto
 
+Need a "Find Us" on admin
+
 Nice work, guys. Plenty more to come 
 
