Update Text Upload Report.org

--- a/Pages/Text Upload Report.org
+++ b/Pages/Text Upload Report.org
@@ -71,7 +71,7 @@ Needs links to bulleted text to bring user to resources outside our site. (KK to
 
 Need a "Find Us" on admin
 
-2 Bugs to report: 
+*** 2 Bugs to report: 
 
 1. Text not appearing under "community"
 
