--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/12Gaming.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/12Gaming.org
@@ -8,4 +8,4 @@ Gamification will revolutionize education
 
 * Abstract
 
-The gaming industry is imbedded in the Virtual World. We provide insights on how to maximize player experiences.  
+The gaming industry is imbedded in the Virtual World. We provide insights on how to maximize player experiences. Using VR technology, a new means are provided to tell stories. With a rich history engrained in virtualization, VR and AR applications allow games to take on a new form and connect even closer to their audiences.
